--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -110,6 +110,7 @@
             <div class="wherewhenwhere">TECH(K)NOW Day, March 8th 2022, Online</div>
             <div class="wherewhenwhere">Agile Greece Summit, September 20th 2019, Athens, Greece</div>
             <div class="wherewhenwhere">Conferencia Agile Testers - Brazilian Online Conference, October 28th 2018, Online</div>
+            <div class="wherewhenwhere">Zeit Day Berlin, September 23rd 2017, Berlin, Germany</div>
             <a href="https://www.slideshare.net/maaretp/ddd-europe-breaking-illusions-with-testing-keynote"><i class="fab fa-slideshare"></i></a>
             <a href="https://www.youtube.com/watch?v=oQXbs3awemg"><i class="fas fa-video"></i></a>
         </div>
@@ -379,8 +380,16 @@
             <div class="talktype">KEYNOTE</div>
             <div class="wherewhenwhere">Testing Assembly, 22.9.2022, Helsinki, Finland</div>
             <div class="talktype">TALK</div>
-            <div class="wherewhenwhere">Speaker at Customer event, 14.6.2022, Online</div>
+            <div class="wherewhenwhere">Customer Organization, 14.6.2022, Online</div>
             <a href="https://www.slideshare.net/maaretp/testing-assembly-from-observations-ti-insights-on-test-specialist-careers"><i class="fab fa-slideshare"></i></a>
+        </div>
+
+        <div class="card2">
+            <div class="timecircle">45 min</div>
+            <div class="talktitle">Harnessing the Power of Learning, co-presented with Ivan Turbin</div>
+            <div class="talktype">TALK</div>
+            <div class="wherewhenwhere">Nordic Testing Days 2018 in Tallinn, Estonia (6-8.6.2018)</div>
+            <a href="https://www.youtube.com/watch?v=YxJZr7t0vcQ"><i class="fas fa-video"></i></a>
         </div>
 
     <div class="card2">
@@ -560,10 +569,40 @@
     </div>
 
     <div class="card2">
+        <div class="timecircle">90 min</div>
+        <div class="talktitle">Explore with Intent - Exploratory Testing Self-Management</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">Agile 2015, Washington DC, USA (4.8.2015)</div>
+        <a href="http://www.slideshare.net/maaretp/agile2015-explore-with-intent-selfmanagement">"><i class="fab fa-slideshare"></i></a>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">90 min</div>
+        <div class="talktitle">Strong-Style Pairing</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">Agile 2016 Conference in Atlanta, GA, USA (25.-29.7.2016)</div>
+        <div class="wherewhenwhere">Tech Excellence meetup in Helsinki, Finland (June 2016)</div>
+        <a href="https://www.slideshare.net/maaretp/agile-2016-strongstyle-pairing"><i class="fab fa-slideshare"></i></a>
+    </div>
+
+    <div class="card2">
         <div class="timecircle">45 min</div>
         <div class="talktitle">Examples of Testing and a Tester's Work in Industry</div>
         <div class="talktype">TALK</div>
         <div class="wherewhenwhere">Aalto University Course, September 16th 2014, Helsinki, Finland </div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">90 min</div>
+        <div class="talktitle">Exploratory Testing an API</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">Booster Conference, Bergen, Norway (9.3.2016)</div>
+        <div class="wherewhenwhere">Agile Alliance Technical Conference, Raleigh, NC, USA (7.-9.4.2016)</div>
+        <div class="wherewhenwhere">Tampereen Testauspäivät 2016, Tampere, Finland (2.6.2016)</div>
+        <div class="wherewhenwhere">Agile 2016 Conference in Atlanta, GA, USA (25.-29.7.2016)</div>
+        <div class="wherewhenwhere">TestWorks Conference in Amsterdam, Netherlands (7.10.2016)</div>
+        <div class="wherewhenwhere">Sanoma Knowledge Exchange in Helsinki, Finland (7.11.2016)</div>
+        <a href="http://www.slideshare.net/maaretp/agile2016-exploratory-testing-an-api"><i class="fab fa-slideshare"></i></a>
     </div>
 
     <div class="card2">
@@ -699,9 +738,39 @@
 
     <div class="card2">
         <div class="timecircle">45 min</div>
+        <div class="talktitle">Learning in Layers: A Demo on Exploratory Testing</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">EIT Digital Lunch, Helsinki, Finland (12.5.2017)</div>
+        <div class="wherewhenwhere">Craft Conference, Budapest, Hungary (25-28.4.2017)</div>
+        <div class="wherewhenwhere">Agile Testing Days USA, Boston, USA (25-29.6.2018)</div>
+        <div class="wherewhenwhere">European Testing Conference 2016, Bucharest, Romania (12.2.2016)</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Modern Agile</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">Agile Finland Modern Agile Breakfast, Helsinki, Finland (1.9.2017)</div>
+        <div class="wherewhenwhere">Agile 2017 by Wakaru, Helsinki, Finland (31.5.2017)</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
         <div class="talktitle">Sustainability. The Fine Line between Work and Hobbies</div>
         <div class="talktype">TALK</div>
         <div class="wherewhenwhere">Helsinki Charity Forum meetup (30.10.2015)</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Ensemble (Mob) Testing</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">Ministry of Testing Masterclass webinar, Online (15.3.2016</div>
+        <div class="wherewhenwhere">EuroSTAR webinar, Online (20.4.2016)</div>
+        <div class="wherewhenwhere">Agile Testing Days Scandinavia, Gothenburg, Sweden (28.4.2016)</div>
+        <div class="wherewhenwhere">Talentum Ohjelmistotestaus 2016, Helsinki, Finland (24.5.2016)</div>
+        <a href="http://www.slideshare.net/maaretp/mob-testing"><i class="fab fa-slideshare"></i></a>
+        <a href="http://www.slideshare.net/maaretp/eurostar-webinar-mob-testing"><i class="fab fa-slideshare"></i></a>
     </div>
 
     <div class="card2">
