--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -422,11 +422,43 @@
         <div class="wherewhenwhere">TextFlix (28.11.2020), Online</div>
         </div>
 
+        <div class="card2">
+            <div class="timecircle">45 min</div>
+            <div class="talktitle">An Update on What Happens in Testing</div>
+            <div class="talktype">TALK</div>
+            <div class="wherewhenwhere">Customer Organization (18.3.2021), Online</div>
+        </div>
+
+        <div class="card2">
+            <div class="timecircle">45 min</div>
+            <div class="talktitle">Testing: from Why to How to What Next</div>
+            <div class="talktype">TALK</div>
+            <div class="wherewhenwhere">JAMK (9.10.2020), Online</div>
+            <div class="wherewhenwhere">JAMK (2.11.2020), Online</div>
+            <div class="wherewhenwhere">JAMK (1.12.2020), Online</div>
+        </div>
+
     <div class="card2">
         <div class="timecircle">45 min</div>
-        <div class="talktitle">An Update on What Happens in Testing</div>
+        <div class="talktitle">The Hacker Mindset or Breaking Something to Make it Work</div>
         <div class="talktype">TALK</div>
-        <div class="wherewhenwhere">Customer Organization (18.3.2021), Online</div>
+        <div class="wherewhenwhere">SHIFT Business Webstival (27.10.2020), Online</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Kuinka testaajaksi opitaan? - uranvaihtajan kesä koekaniinina (How to Learn to Become Tester - Career Changer's Summer as Lab Rat)</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">Mimmit Koodaa (Women who Code) -webinar (7.8.2020), Online</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">An Exploratory Tester's lessons on Security Threat Modeling</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">Customer Organization, online (18.5.2020)</div>
+        <div class="wherewhenwhere">Code Europe Wroclaw 2017, Wroclaw, Poland (13.12.2017)</div>
+        <div class="wherewhenwhere">Oredev 2017, Malmö, Sweden (6.-10.11.2017)</div>
     </div>
 
     <div class="card2">
@@ -866,6 +898,20 @@
         <div class="talktitle">What Lies Beneath... Ask Me Anything ft. Maaret Pyhäjärvi</div>
         <div class="talktype">PANEL</div>
         <div class="wherewhenwhere">Webinar (19.8.2022), Online</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">What Does Testing Mean Today?</div>
+        <div class="talktype">PANEL</div>
+        <div class="wherewhenwhere">BCS SIGiST (20.10.2020), Online</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Ensuring Excellent Overall Quality Dialogue</div>
+        <div class="talktype">PANEL</div>
+        <div class="wherewhenwhere">Panelist at Scan Agile (21.9.2020), Online</div>
     </div>
 
     <div class="card2">
