causes link + more

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 <a href="https://techvoices.org"><img src="images/techvoices.jpg" alt="Techvoices - diversity in conference speaking"></a>
                 <a href="https://awesometesters.tech"><img src="images/awesometesters.jpg" alt="Awesome Testers"></a>
                 <a href="selenium.dev"><img src="images/selenium.jpg" alt="Selenium PLC - Project Leadership Committee"></a>
-                <a href="https://www.facebook.com/groups/ohjelmistotestausry"><img src="images/ohjelmistotestausry.jpg" alt="Software Testing Finland ry, non-profit"></a>
+                <a href="https://ohjelmistotestaus.org"><img src="images/ohjelmistotestausry.jpg" alt="Software Testing Finland ry, non-profit"></a>
                 <a href="https://tivia.fi"><img src="images/tivia.jpg" alt="TIVIA ry"></a>
                 <a href="https://mimmitkoodaa.ohjelmistoebusiness.fi"><img src="images/mimmitkoodaa.jpg" alt="Mimmit Koodaa"></a>
             </div>
