--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -559,6 +559,13 @@
 
     <div class="card2">
         <div class="timecircle">45 min</div>
+        <div class="talktitle">Little Learning Actions for Better Feedback</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">Serverless Architecture Conference 2019 (15.-16.10.2019), Berlin, Germany</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
         <div class="talktitle">Exploring Pipelines</div>
         <div class="talktype">TALK</div>
         <div class="wherewhenwhere">TSQA meetup (1.4.2021), Online</div>
@@ -619,9 +626,38 @@
 
     <div class="card2">
         <div class="timecircle">45 min</div>
+        <div class="talktitle">Exploratory Testing Shift Left and Right - What great exploratory testing looks under conditions of TOAD (Testing, Observability and DevOps)</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">OmniTesting Conference (16.7.2020), Online</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Test Automation is Test Documentation, demo talk</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">Mimmit Koodaa This Is Not a Webinar (20.11.2020), Online</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Exploratory Testing Essentials</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">TechWell Webinar (2.4.2020), Online</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
         <div class="talktitle">Examples of Testing and a Tester's Work in Industry</div>
         <div class="talktype">TALK</div>
-        <div class="wherewhenwhere">Aalto University Course, September 16th 2014, Helsinki, Finland </div>
+        <div class="wherewhenwhere">Aalto University Course, September 16th 2014, Helsinki, Finland</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Agile as If You Meant It</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">Brewing Agile 2020 (4.3.2020), Gothenburg, Sweden</div>
+        <div class="wherewhenwhere">FlowCon 2019 (13.12.2019), Paris, France</div>
     </div>
 
     <div class="card2">
@@ -656,6 +692,15 @@
         <div class="talktitle">On tärkeää osata muutakin kuin testausta, mutta testaus rautaisen hyvin (It's Important to Know More Than Testing, But Testing Especially Well)</div>
         <div class="talktype">TALK</div>
         <div class="wherewhenwhere">Ohjelmistotestaus ry, May 26th 2014, Helsinki, Finland </div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Test Automation Process Improvement in a DevOps Team: Experience Report</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">Agile Testing and Test Automation Summit North America, March 25th, Online</div>
+        <div class="wherewhenwhere">ICST / NEXTA 2020 (24.10.2020), Online</div>
+        <div class="wherewhenwhere">Selenium Day ANZ (16.10.2020), Online</div>
     </div>
 
     <div class="card2">
