All until 2014 in this and some even older

--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -559,9 +559,24 @@
 
     <div class="card2">
         <div class="timecircle">45 min</div>
+        <div class="talktitle">Women in Agile</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">Women in Agile Summit, Agile Testing Days, Potsdam, Germany (8.12.2016)</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
         <div class="talktitle">Little Learning Actions for Better Feedback</div>
         <div class="talktype">TALK</div>
         <div class="wherewhenwhere">Serverless Architecture Conference 2019 (15.-16.10.2019), Berlin, Germany</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Quality Doesn't Belong with the Tester</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">TestBash, Brighton, UK (27.3.2015)</div>
+        <a href="http://www.slideshare.net/maaretp/testbash-quality-does-not-belong-with-the-tester"><i class="fab fa-slideshare"></i></a>
     </div>
 
     <div class="card2">
@@ -587,6 +602,13 @@
         <div class="wherewhenwhere">Agile Finland Continuous Deployment event, December 2nd 2014, Helsinki</div>
         <div class="wherewhenwhere">Ministry of Testing Masterclass webinar, Online (16.9.2015)</div>
         <div class="wherewhenwhere">STPConference, San Diego, USA (1.4.2015)</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Experimenting in Context for Exploratory Testing</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">Agile Testing Days 2015, Potsdam, Germany (9.11.2015)</div>
         <a href="http://www.slideshare.net/maaretp/experimenting-in-context-for-exploratory-testing"><i class="fab fa-slideshare"></i></a>
     </div>
 
@@ -834,6 +856,108 @@
     <div class="card2">
         <div class="timecircle">45 min</div>
         <div class="talktitle">Sustainability. The Fine Line between Work and Hobbies</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">Test Automation Day, Rotterdam, the Netherlands (22.6.2017)</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Holding Space: Making Things Better by Doing Less</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">Test Bash Netherlands in Utrech, the Netherlands (12-13.4.2018)</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Internal Open Source</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">Tech Excellence Conference (3.6.2019), Helsinki, Finland</div>
+        <a href="https://www.youtube.com/watch?v=ZWI6MFvxQJk"><i class="fas fa-video"></i></a>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Teaching and Coaching Exploratory Testing with an Example</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">AST Webinar (13.9.2018)</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">A Case of Failure: Pinpointing a Problem for Correction</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">Online Testing Conference (1-3.12.2020), Online</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Working without a Product Owner</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">Agile India (21.3.2019), Bengaluru, India</div>
+        <a href="https://www.youtube.com/watch?v=ueclEflC0Mo"><i class="fas fa-video"></i></a>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Practices Change - Moving to Delivering Continuously</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">Agile India (22.3.2019), Bengaluru, India</div>
+        <a href="https://www.youtube.com/watch?v=J2qLwAFN7_8"><i class="fas fa-video"></i></a>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Getting Existing Code under Tests</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">Helsinki Tech Girls meetup (8.3.2018)</div>
+        <div class="wherewhenwhere">Helsinki Software Testing meetup (16.4.2018)</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Lessons Learned Building a Management Backend in AWS</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">AWS Community Day, Helsinki, Finland (21.3.2018)</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">15 min</div>
+        <div class="talktitle">From Pull Requests to Pairing</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">RoboCon, Helsinki, Finland (19.1.2018)</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">A Chase of Incremental Improvement</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">Nordic Testing Days 2017, Tallinn, Estonia (8.-9.6.2017)</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">System Integrations' Testing (Järjestelmäintegraatioiden testaus)</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">Alma Talent Järjestelmäintegraatiot -seminaari, Helsinki, Finland (15.2.2018)</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Tips to Improve Collaboration between Testers and Developers - paired talk with Juke Trabold</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">Ministry of Testing Masterclass Webinar (5.12.2017)</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Career in/with Testing</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">Finnish Software Testing, Helsinki Agile Testing -meetup, Helsinki, Finland (19.4.2017)</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Ensemble (Mob) Testing for Better Test Automation</div>
         <div class="talktype">TALK</div>
         <div class="wherewhenwhere">Helsinki Charity Forum meetup (30.10.2015)</div>
     </div>
