quicklinks and footer

--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -21,7 +21,15 @@
 
 <h1 class="header">Past talks, workshops and trainings</h1>
 
-<h2>Keynotes, Talks, and Panels</h2>
+<div class="quicklinks">
+    <ul>
+        <li><a href="#keynotes">Keynotes, Talks and Panels</a></li>
+        <li><a href="#workshop">Workshops and Tutorials</a></li>
+        <li><a href="#training">Training Courses</a></li>
+    </ul>
+</div>
+
+<h2 id="keynotes">Keynotes, Talks, and Panels</h2>
 <p>Keynotes are invited talks that generally speak for the whole conference and cater to widest variety of people in audiences. Talks can be for any audience. Panels are sessions where you prepare questions and perspectives, and try to present it with a group of people following energies of the audience, or at least a second person.</p>
 
 <section class="talks">
@@ -1143,7 +1151,7 @@
     </div>
     </section>
 
-    <h2>Workshops and Tutorials</h2>
+    <h2 id="workshop">Workshops and Tutorials</h2>
 
     <p>Workshops are shorter sessions aimed at teaching one thing. Tutorials are scaled up trainings for conference purposes. While a training is usually limited to 12-16 people, a tutorial of same topic can run on 50+ people. It leaves it more broadcast of information than a skills transfer.</p>
 
@@ -1326,7 +1334,7 @@
 
     </section>
 
-    <h2>Training Courses</h2>
+    <h2 id="course">Training Courses</h2>
 
     <p>Training course aim at solidifying knowledge and skills transfer to students, moving each student from where they are to better. Really great courses would run with same group over longer time, but in business training, we often start by budgeting 1/2 day to 2 days for a particular topic.</p>
 
@@ -1670,6 +1678,27 @@
     </div>
 
             </div>
+            </section>
+
+            <section class="contact" id="contact">
+                <h2>Maaret Pyhäjärvi</h2>
+                <p>I read my emails weekly. For faster response, use Linkedin.</p>
+                <div class="social">
+                    <a href="mailto:maaret+website@iki.fi"><i class="fas fa-envelope-square"></i></a>
+                    <a rel="me" href="https://mas.to/@maaretp" target="_blank" rel="noopener noreferrer me" title="Mastodon - international"><i class="fab fa-mastodon"></i></a>
+                    <a rel="me" href="https://tivia.social/@maaret" target="_blank" rel="noopener noreferrer me" title="Mastodon - suomeksi"><i class="fab fa-mastodon"></i></a>
+                    <a href="https://fi.linkedin.com/in/maaret" target="_blank" rel="noopener noreferrer me" title="LinkedIn profile"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://facebook.com/MaaretPy/" target="_blank" rel="noopener noreferrer me" title="Facebook page"><i class="fab fa-facebook-square"></i></a>
+                    <a href="https://twitter.com/maaretp" target="_blank" rel="noopener noreferrer me" title="Twitter profile"><i class="fab fa-twitter-square"></i></a>
+                    <a href="https://www.polywork.com/maaretp" target="_blank" rel="noopener noreferrer me" title="Polywork profile"><i class="fas fa-bookmark"></i></a>
+                    <a href="https://anchor.fm/exploratory-testing" target="_blank" rel="noopener noreferrer me" title="My Podcast"><i class="fas fa-podcast"></i></a>
+                    <a href="https://visible-quality.blogspot.fi" target="_blank" rel="noopener noreferrer me" title="My Blog"><i class="fab fa-blogger"></i></a>
+                    <a href="https://dev.to/maaretp" target="_blank" rel="noopener noreferrer me" title="Talks and Trainings Turned Articles"><i class="fab fa-dev"></i></a>
+                    <a href="https://www.slideshare.net/maaretp" target="_blank" rel="noopener noreferrer me" title="My slides on slideshare"><i class="fab fa-slideshare"></i></a>
+                    <a href="https://github.com/maaretp" target="_blank" rel="noopener noreferrer me" title="Me on Github"><i class="fab fa-github-square"></i></a>
+                    <a href="https://www.youtube.com/channel/UCrTlIKuIS-LmRk-aAbcxTKg" target="_blank" rel="noopener noreferrer me" title="YouTube channel"><i class="fab fa-youtube-square"></i></a>
+                </div>
+                <br><br>
             </section>
 
 
