--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -29,8 +29,10 @@
     </ul>
 </div>
 
-<h2 id="keynotes">Keynotes, Talks, and Panels</h2>
+<div class="sectiondescr">
+<h2 id="keynotes"">Keynotes, Talks, and Panels</h2>
 <p>Keynotes are invited talks that generally speak for the whole conference and cater to widest variety of people in audiences. Talks can be for any audience. Panels are sessions where you prepare questions and perspectives, and try to present it with a group of people following energies of the audience, or at least a second person.</p>
+</div>
 
 <section class="talks">
     <div class="box2">
@@ -1151,9 +1153,10 @@
     </div>
     </section>
 
+    <div class="sectiondescr">
     <h2 id="workshop">Workshops and Tutorials</h2>
-
     <p>Workshops are shorter sessions aimed at teaching one thing. Tutorials are scaled up trainings for conference purposes. While a training is usually limited to 12-16 people, a tutorial of same topic can run on 50+ people. It leaves it more broadcast of information than a skills transfer.</p>
+    </div>
 
     <section class="workshops_tutorials">
         <div class="box2">
@@ -1333,10 +1336,10 @@
             </div>
 
     </section>
-
+    <div class="sectiondescr">
     <h2 id="course">Training Courses</h2>
-
     <p>Training course aim at solidifying knowledge and skills transfer to students, moving each student from where they are to better. Really great courses would run with same group over longer time, but in business training, we often start by budgeting 1/2 day to 2 days for a particular topic.</p>
+    </div>
 
     <section class="trainings">
         <div class="box2">
