Keynote theme categorization

--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -59,14 +59,6 @@
 
         <div class="card2">
             <div class="timecircle">45 min</div>
-            <div class="talktitle">Targeting Errors of Omission</div>
-            <div class="talktype">KEYNOTE</div> 
-            <div class="wherewhenwhere">Agile Testing Alliance Global Testing Retreat (ATAGTR), December 9-11th 2022, Online</div>
-            <a href="https://www.slideshare.net/maaretp/atagr-targeting-errors-of-omission"><i class="fab fa-slideshare"></i></a>
-        </div>
-
-        <div class="card2">
-            <div class="timecircle">45 min</div>
             <div class="status">SCHEDULED</div>
             <div class="talktitle">Let's Do a Thing and Call It Foo</div>
             <div class="talktype">KEYNOTE</div>
@@ -79,7 +71,15 @@
             <a href="https://www.youtube.com/watch?v=lkJ6bixMrg8&t=2985s"><i class="fas fa-video"></i></a>
             <a href="https://www.lambdatest.com/blog/lets-do-it-a-thing-and-call-it-foo/"><i class="far fa-gem"></i></a>
             <div class="talktheme">#ResultGap, #UnitTesting, #ExploratoryTesting</div>
+        </div>
 
+        <div class="card2">
+            <div class="timecircle">45 min</div>
+            <div class="talktitle">Targeting Errors of Omission</div>
+            <div class="talktype">KEYNOTE</div>
+            <div class="wherewhenwhere">Agile Testing Alliance Global Testing Retreat (ATAGTR), December 9-11th 2022, Online</div>
+            <a href="https://www.slideshare.net/maaretp/atagr-targeting-errors-of-omission"><i class="fab fa-slideshare"></i></a>
+            <div class="talktheme">#ResultGap, #Techniques, #Documentation</div>
         </div>
 
         <div class="card2">
@@ -123,6 +123,7 @@
             <div class="wherewhenwhere">Zeit Day Berlin, September 23rd 2017, Berlin, Germany</div>
             <a href="https://www.slideshare.net/maaretp/ddd-europe-breaking-illusions-with-testing-keynote"><i class="fab fa-slideshare"></i></a>
             <a href="https://www.youtube.com/watch?v=oQXbs3awemg"><i class="fas fa-video"></i></a>
+            <div class="talktheme">#Testing, #Improvement</div>
         </div>
 
         <div class="card2">
@@ -148,6 +149,7 @@
             <div class="talktype">TALK</div>
             <div class="wherewhenwhere">Customer Organization, January 10th 2022, Online</div>
             <a href="https://www.slideshare.net/maaretp/testjsconf-go-find-what-we-may-have-missed"><i class="fab fa-slideshare"></i></a>
+            <div class="talktheme">#ResultsGap, #ResultsCoverage</div>
         </div>
 
         <div class="card2">
@@ -160,6 +162,7 @@
             <div class="wherewhenwhere">Game of Testing -unconference (4.9.2022), Online</div>
             <a href="https://www.slideshare.net/maaretp/hustef-hands-off-exploratory-testing-managing-at-scale"><i class="fab fa-slideshare"></i></a>
             <a href="https://www.youtube.com/watch?v=uAPwRaKIa9E"><i class="fas fa-video"></i></a>
+            <div class="talktheme">#ModernTestManagement, #ExploratoryTesting</div>
         </div>
 
         <div class="card2">
@@ -169,6 +172,7 @@
             <div class="wherewhenwhere">Applitools Future of Testing (29.6.2021), Online</div>
             <a href="https://applitools.com/event/practice-makes-better-5-times-to-continuous-delivery/"><i class="fas fa-video"></i></a>
             <a href="https://dev.to/maaretp/practice-makes-better-5x-to-continuous-releases-9nh"><i class="far fa-gem""></i></a>
+            <div class="talktheme">#ModernTestManagement, #ContinuousDelivery</div>
         </div>
 
         <div class="card2">
@@ -178,6 +182,7 @@
             <div class="wherewhenwhere">Agile Testing Alliance Global Testing Retreat (ATAGTR) (11.12.2021), Online</div>
             <a href="https://www.slideshare.net/maaretp/atagr-i-have-a-rock-in-my-shoe-navigating-improvement"><i class="fab fa-slideshare"></i></a>
             <a href="https://www.youtube.com/watch?v=tzHpBXhxCHE"><i class="fas fa-video"></i></a>
+            <div class="talktheme">#Improvement, #Change, #Attitude</div>
         </div>
 
         <div class="card2">
@@ -186,6 +191,7 @@
             <div class="talktype">KEYNOTE</div>
             <div class="wherewhenwhere">Testing Voices, June 29th 2021, Online</div>
             <a href="https://www.slideshare.net/maaretp/testing-voices-21-keynote-testing-becoming-harder-to-bevaluable"><i class="fab fa-slideshare"></i></a>
+            <div class="talktheme">#ResultsGap, #Value, #Cost</div>
         </div>
 
         <div class="card2">
@@ -193,6 +199,7 @@
             <div class="talktitle">Opportunity Cost: Balancing Now and Future</div>
             <div class="talktype">KEYNOTE</div>
             <div class="wherewhenwhere">World Quality Summit (8.9.2021), Online</div>
+            <div class="talktheme">#Value, #Cost, #Quality</div>
         </div>
 
         <div class="card2">
@@ -201,6 +208,7 @@
             <div class="talktype">KEYNOTE</div>
             <div class="wherewhenwhere">Appium Lite Conference (2.9.2021), Online</div>
             <a href="https://www.slideshare.net/maaretp/appiumlite-keynote-many-hats-to-make-a-tester-250096476"><i class="fab fa-slideshare"></i></a>
+            <div class="talktheme">#WorkBreakdown, #Career</div>
         </div>
 
         <div class="card2">
@@ -209,6 +217,7 @@
             <div class="talktype">KEYNOTE</div>
             <div class="wherewhenwhere">Agile Testing Alliance Global Testing Retreat (ATAGTR) (12-13.12.2020), Online</div>
             <a href="https://www.slideshare.net/maaretp/atagtr-20-keynote-building-status"><i class="fab fa-slideshare"></i></a>
+            <div class="talktheme">#Attitude, #StatusDifferences, #Improvement</div>
         </div>
 
         <div class="card2">
@@ -217,6 +226,7 @@
             <div class="talktype">KEYNOTE</div>
             <div class="wherewhenwhere">Testing United Conference (5-6.11.2020), Online</div>
             <a href="https://www.slideshare.net/maaretp/testing-united-social-software-testing-approaches"><i class="fab fa-slideshare"></i></a>
+            <div class="talktheme">#EnsembleTesting, #EnsembleProgramming, #PairTesting, #PairProgramming</div>
         </div>
 
         <div class="card2">
@@ -224,6 +234,7 @@
             <div class="talktitle">Opportunity Cost Drives my Testing</div>
             <div class="talktype">KEYNOTE</div>
             <div class="wherewhenwhere">Step-In Summit Conference (4.9.2020), Online</div>
+            <div class="talktheme">#Value, #Cost, #Agency</div>
         </div>
 
         <div class="card2">
@@ -231,11 +242,12 @@
             <div class="talktitle">Exploratory Testing on Computer Interfaces</div>
             <div class="talktype">KEYNOTE</div>
             <div class="wherewhenwhere">API Conf 2019 (16.10.2019), Berlin, Germany</div>
+            <div class="talktheme">#ContemporaryExploratoryTesting, #APITesting</div>
         </div>
 
         <div class="card2">
             <div class="timecircle">45 min</div>
-            <div class="talktitle">Intersection of Automation and Exploratory TestingExploratory Testing on Computer Interfaces</div>
+            <div class="talktitle">Intersection of Automation and Exploratory Testing</div>
             <div class="talktype">KEYNOTE</div>
             <div class="wherewhenwhere">Testing Cup (10.6.2019), Poznan, Poland</div>
             <div class="wherewhenwhere">TestIstanbul (16.4.2019), Istanbul, Turkey</div>
@@ -246,6 +258,7 @@
             <div class="wherewhenwhere">Software Testing Helsinki Meetup (5.10.2018), Helsinki, Finland</div>
             <div class="wherewhenwhere">The Testing Guild Online Conference (20.6.2018), Online</div>
             <a href="https://www.youtube.com/watch?v=Es4SfYog5VA"><i class="fas fa-video"></i></a>
+            <div class="talktheme">#ContemporaryExploratoryTesting, #ExploratoryUnitTesting</div>
         </div>
 
         <div class="card2">
@@ -256,6 +269,7 @@
             <div class="wherewhenwhere">Customer Organization (20.12.2018), Helsinki, Finland</div>
             <div class="talktype">TALK</div>
             <div class="wherewhenwhere">JAX London (9.10.2019), London, United Kingdom</div>
+            <div class="talktheme">#Quality, #Learning</div>
         </div>
 
         <div class="card2">
@@ -263,6 +277,7 @@
             <div class="talktitle">Next Level Teamwork: Pairing and Ensembling (Mobbing)</div>
             <div class="talktype">KEYNOTE</div>
             <div class="wherewhenwhere">TestBash Australia (19.10.2018), Sydney, Australia</div>
+            <div class="talktheme">#EnsembleTesting, #EnsembleProgramming, #PairTesting, #PairProgramming</div>
         </div>
 
         <div class="card2">
@@ -274,6 +289,7 @@
             <div class="wherewhenwhere">SEETest Conference 2017, Sofia, Bulgaria (29.9.2017)</div>
             <div class="talktype">TALK</div>
             <div class="wherewhenwhere">STAREast Conference 2018, Orlando, USA (29.4-4.5.2018)</div>
+            <div class="talktheme">#Teamwork, #ModernAgile, #WorkBreakdown</div>
         </div>
 
         <div class="card2">
@@ -296,6 +312,7 @@
             <div class="talktype">KEYNOTE</div>
             <div class="wherewhenwhere">Moldova Software Testing and Automation Conference, Chisinau, Moldova (10.2.2018)</div>
             <div class="wherewhenwhere">Swiss Testing Days, Zurich, Switzerland (16.2.2017)</div>
+            <div class="talktheme">#Impact, #ExploratoryTesting, #ModernAgile</div>
         </div>
 
         <div class="card2">
@@ -325,6 +342,7 @@
             <div class="talktype">TALK</div>
             <div class="wherewhenwhere">Talentum Testaus 2016, Helsinki, Finland (8.11.2016)</div>
             <div class="wherewhenwhere">AgileJKL meetup, Jyväskylä, Finland (7.9.2016)</div>
+            <div class="talktheme">#ContemporaryExploratoryTesting, #ProgrammaticTests</div>
         </div>
 
         <div class="card2">
@@ -334,6 +352,7 @@
             <div class="wherewhenwhere">Test Masters Academy New Testing Conference, New York, USA (26-27.9.2016)</div>
             <div class="talktype">TALK</div>
             <div class="wherewhenwhere">Speaker at FiSTB Testing Assembly, Helsinki, Finland (20-21.9.2016)</div>
+            <div class="talktheme">#Learning, #ContemporaryExploratoryTesting, #Attitude</div>
         </div>
 
         <div class="card2">
@@ -346,6 +365,7 @@
             <div class="wherewhenwhere">Software Testing Finland / Helsinki Agile Testing meetup (7.10.2015)</div>
             <div class="wherewhenwhere">Customer Organization, Helsinki, Finland (10.9.2015)</div>
             <a href="http://www.slideshare.net/maaretp/tales-from-tester-developer-collaboration"><i class="fab fa-slideshare"></i></a>
+            <div class="talktheme">#EnsembleTesting, #EnsembleProgramming, #PairTesting, #PairProgramming</div>
         </div>
 
         <div class="card2">
@@ -363,6 +383,7 @@
             <div class="talktype">KEYNOTE</div>
             <div class="wherewhenwhere">Nortal Tech Days, May 22nd 2015, Tallinn, Estonia</div>
             <a href="http://www.slideshare.net/maaretp/software-talks-learn-to-listen"><i class="fab fa-slideshare"></i></a>
+            <div class="talktheme">#ExploratoryTesting, #ExternalImagination</div>
         </div>
 
         <div class="card2">
@@ -373,6 +394,7 @@
             <div class="talktype">TALK</div>
             <div class="wherewhenwhere">Customer Organization, 14.6.2022, Online</div>
             <a href="https://www.slideshare.net/maaretp/testing-assembly-from-observations-ti-insights-on-test-specialist-careers"><i class="fab fa-slideshare"></i></a>
+            <div class="talktheme">#Career, #Mentoring</div>
         </div>
 
         <div class="card2">
@@ -382,6 +404,7 @@
             <div class="wherewhenwhere">Agile 2016 Conference in Atlanta, GA, USA (25.-29.7.2016)</div>
             <div class="wherewhenwhere">XP2015, Helsinki, Finland (28.5.2015)</div>
             <a href="http://www.slideshare.net/maaretp/xp2015-breaking-your-illusions-with-exploratory-testing"><i class="fab fa-slideshare"></i></a>
+            <div class="talktheme">#ContemporaryExploratoryTesting, #Improvement</div>
         </div>
 
         <div class="card2">
